// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds user search views search gives relevant results: postgres 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "cursor": "0.5::Cara.Wiegand69",
    "did": "user(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "Cara.Wiegand69",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "cursor": "0.57142854::Eudora_Dietrich4",
    "description": "",
    "did": "user(1)",
    "displayName": "Carol Littel",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "Eudora_Dietrich4",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "cursor": "0.625::Shane_Torphy52",
    "description": "",
    "did": "user(2)",
    "displayName": "Sadie Carter",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "Shane_Torphy52",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "cursor": "0.6666666::Aliya.Hodkiewicz",
    "description": "",
    "did": "user(3)",
    "displayName": "Carlton Abernathy IV",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "Aliya.Hodkiewicz",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "cursor": "0.6666666::Carlos6",
    "did": "user(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "Carlos6",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "cursor": "0.7::Carolina_McDermott77",
    "description": "",
    "did": "user(5)",
    "displayName": "Latoya Windler",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "Carolina_McDermott77",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "cursor": "0.75::Cayla_Marquardt39",
    "description": "",
    "did": "user(6)",
    "displayName": "Rachel Kshlerin",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "Cayla_Marquardt39",
  },
]
`;

exports[`pds user search views typeahead gives relevant results: postgres 1`] = `
Array [
  Object {
    "did": "user(0)",
    "name": "Cara.Wiegand69",
  },
  Object {
    "did": "user(1)",
    "displayName": "Carol Littel",
    "name": "Eudora_Dietrich4",
  },
  Object {
    "did": "user(2)",
    "displayName": "Sadie Carter",
    "name": "Shane_Torphy52",
  },
  Object {
    "did": "user(3)",
    "displayName": "Carlton Abernathy IV",
    "name": "Aliya.Hodkiewicz",
  },
  Object {
    "did": "user(4)",
    "name": "Carlos6",
  },
  Object {
    "did": "user(5)",
    "displayName": "Latoya Windler",
    "name": "Carolina_McDermott77",
  },
  Object {
    "did": "user(6)",
    "displayName": "Rachel Kshlerin",
    "name": "Cayla_Marquardt39",
  },
]
`;
